--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev": "webpack serve",
+    "prod": "webpack --mode production",
+    "predeploy": "npm run prod",
+    "deploy": "gh-pages -d dist",
+    "clean": "rm -rf dist/"
   },
   "keywords": [],
   "author": "",
@@ -11,11 +17,18 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^7.1.2",
+    "dotenv-webpack": "^8.1.1",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.101.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2",
+    "npm": "^11.6.2",
+    "run": "^1.5.0",
+    "start": "^5.1.0"
   }
 }
