--- a/APIs.env
+++ b/APIs.env
@@ -2,3 +2,4 @@
 # BigCommerce API credentials
 BIGCOMMERCE_ACCESS_TOKEN=sz0757kfhhh8ayybhbu6i8gfka5bjvx
 BIGCOMMERCE_API_PATH=https://api.bigcommerce.com/stores/wo11aw4mqc/v2
+BIGCOMMERCE_PRODUCTS_API_PATH=https://api.bigcommerce.com/stores/wo11aw4mqc/v3
