--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "express": "^5.1.0",
     "node-fetch": "^3.3.2",
     "npm": "^11.6.2",
     "run": "^1.5.0",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "whatwg-fetch": "^3.6.20"
   }
 }
