--- a/APIs.env
+++ b/APIs.env
@@ -1,5 +1,4 @@
-
-# BigCommerce API credentials
-BIGCOMMERCE_ACCESS_TOKEN=sz0757kfhhh8ayybhbu6i8gfka5bjvx
-BIGCOMMERCE_API_PATH=https://api.bigcommerce.com/stores/wo11aw4mqc/v2
-BIGCOMMERCE_PRODUCTS_API_PATH=https://api.bigcommerce.com/stores/wo11aw4mqc/v3
+# Example environment variables
+PORT=3000
+CORS_ORIGIN=*
+# When deploying, do not put secrets here for user-provided store tokens.
