--- a/package.json
+++ b/package.json
@@ -1,39 +1,31 @@
 {
-  "name": "webpack-practice",
+  "name": "BigCommerceAPI",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Orders API TEST - frontend + backend proxy for BigCommerce (The Odin Project exercise)",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "dev": "webpack serve",
-    "prod": "webpack --mode production",
-    "predeploy": "npm run prod",
-    "deploy": "gh-pages -d dist",
-    "clean": "rm -rf dist/"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "css-loader": "^7.1.2",
-    "dotenv-webpack": "^8.1.1",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "start": "node server.js",
+    "dev": "webpack serve --config webpack.config.js --mode development",
+    "build": "webpack --mode production",
+    "clean": "rm -rf dist",
+    "deploy": "npm run build && gh-pages -d dist",
+    "lint": "eslint . || true"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "gh-pages": "^6.3.0",
-    "helmet": "^8.1.0",
-    "node-fetch": "^3.3.2",
-    "npm": "^11.6.2",
-    "run": "^1.5.0",
-    "serve-favicon": "^2.5.1",
-    "start": "^5.1.0",
-    "whatwg-fetch": "^3.6.20"
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.7",
+    "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "html-webpack-plugin": "^5.5.3",
+    "style-loader": "^3.3.3",
+    "css-loader": "^6.8.1",
+    "html-loader": "^4.2.0",
+    "eslint": "^8.48.0"
   }
 }
