--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "BigCommerceAPI",
   "version": "1.0.0",
-  "description": "Orders API TEST - frontend + backend proxy for BigCommerce (The Odin Project exercise)",
+  "description": "Orders API TEST - frontend + backend proxy for BigCommerce",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "webpack serve --config webpack.config.js --mode development",
     "build": "webpack --mode production",
-    "clean": "rm -rf dist",
-    "deploy": "npm run build && gh-pages -d dist",
+    "clean": "rimraf dist/",
     "lint": "eslint . || true"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "helmet": "^7.0.0",
+    "helmet": "^7.2.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "whatwg-fetch": "^3.6.20"
   },
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "eslint": "^8.48.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "rimraf": "^5.0.0",
+    "style-loader": "^3.3.3",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "html-webpack-plugin": "^5.5.3",
-    "style-loader": "^3.3.3",
-    "css-loader": "^6.8.1",
-    "html-loader": "^4.2.0",
-    "eslint": "^8.48.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
